(galleris) Fix small layout issues

--- a/src/app/shared/components/misc/image-viewer/image-viewer-social-buttons.component.scss
+++ b/src/app/shared/components/misc/image-viewer/image-viewer-social-buttons.component.scss
@@ -40,6 +40,8 @@
     border-bottom: 1px dashed var(--darkerAccentColor);
     font-size: .9rem;
     cursor: pointer;
+    display: flex;
+    flex-wrap: nowrap;
 
     @media (hover: hover) and (pointer: fine) {
       &:hover {
